infrastructure/k8s/base-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zaksoft
