infrastructure/k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: zaksoft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: auth-service:v6
        imagePullPolicy: Never
        ports:
        - containerPort: 3001
