infrastructure/k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: zaksoft
spec:
  type: NodePort
  selector:
    app: auth
  ports:
    - port: 3001
      targetPort: 3001
      nodePort: 30007
