infrastructure/k8s/billing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
  namespace: zaksoft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
  template:
    metadata:
      labels:
        app: billing
    spec:
      containers:
      - name: billing
        image: billing-service:v2
        imagePullPolicy: Never
        ports:
        - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: zaksoft
spec:
  selector:
    app: billing
  ports:
  - port: 3005
    targetPort: 3005
