infrastructure/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: zaksoft

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: frontend:v7
          imagePullPolicy: Never

          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: zaksoft

spec:
  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

  type: ClusterIP
